--- a/Assignments/Assignment3/Wordshake.html
+++ b/Assignments/Assignment3/Wordshake.html
@@ -3,75 +3,78 @@
 <head>
     <meta charset="UTF-8">
 	<title>Shuffle</title>
+	<link rel="stylesheet" type="text/css" href="hindi.css">
 </head>
 
 <body>
-	<table id="tbl">
+	<h1 style="text-align:center;">If you can, just do it.</h1>
+	<table id="tbl" align="center" div="Table">
 	<tr>
-		<td><button type="button" onclick="getdata(1,1)" id="11"></td>
-		<td><button type="button" onclick="getdata(1,2)" id="12"></td>
-		<td><button type="button" onclick="getdata(1,3)" id="13"></td>
-		<td><button type="button" onclick="getdata(1,4)" id="14"></td>
-		<td><button type="button" onclick="getdata(1,5)" id="15"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(1,1)" id="11"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(1,2)" id="12"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(1,3)" id="13"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(1,4)" id="14"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(1,5)" id="15"></td>
 	</tr>
 	<tr>
-		<td><button type="button" onclick="getdata(2,1)" id="21"></td>
-		<td><button type="button" onclick="getdata(2,2)" id="22"></td>
-		<td><button type="button" onclick="getdata(2,3)" id="23"></td>
-		<td><button type="button" onclick="getdata(2,4)" id="24"></td>
-		<td><button type="button" onclick="getdata(2,5)" id="25"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(2,1)" id="21"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(2,2)" id="22"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(2,3)" id="23"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(2,4)" id="24"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(2,5)" id="25"></td>
 	</tr>
 	<tr>
-		<td><button type="button" onclick="getdata(3,1)" id="31"></td>
-		<td><button type="button" onclick="getdata(3,2)" id="32"></td>
-		<td><button type="button" onclick="getdata(3,3)" id="33"></td>
-		<td><button type="button" onclick="getdata(3,4)" id="34"></td>
-		<td><button type="button" onclick="getdata(3,5)" id="35"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(3,1)" id="31"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(3,2)" id="32"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(3,3)" id="33"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(3,4)" id="34"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(3,5)" id="35"></td>
 	</tr>
 	<tr>
-		<td><button type="button" onclick="getdata(4,1)" id="41"></td>
-		<td><button type="button" onclick="getdata(4,2)" id="42"></td>
-		<td><button type="button" onclick="getdata(4,3)" id="43"></td>
-		<td><button type="button" onclick="getdata(4,4)" id="44"></td>
-		<td><button type="button" onclick="getdata(4,5)" id="45"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(4,1)" id="41"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(4,2)" id="42"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(4,3)" id="43"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(4,4)" id="44"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(4,5)" id="45"></td>
 	</tr>
 	<tr>
-		<td><button type="button" onclick="getdata(5,1)" id="51"></td>
-		<td><button type="button" onclick="getdata(5,2)" id="52"></td>
-		<td><button type="button" onclick="getdata(5,3)" id="53"></td>
-		<td><button type="button" onclick="getdata(5,4)" id="54"></td>
-		<td><button type="button" onclick="getdata(5,5)" id="55"></td>
-	</tr>
-	</table>
-	<table id="tbl1">
-	<tr>
-		<td><button type="button" onclick="getdata1(1,1)" id="111"></td>
-		<td><button type="button" onclick="getdata1(1,2)" id="112"></td>
-		<td><button type="button" onclick="getdata1(1,3)" id="113"></td>
-	</tr>
-	<tr>
-		<td><button type="button" onclick="getdata1(2,1)" id="121"></td>
-		<td><button type="button" onclick="getdata1(2,2)" id="122"></td>
-		<td><button type="button" onclick="getdata1(2,3)" id="123"></td>
-	</tr>
-	<tr>
-		<td><button type="button" onclick="getdata1(3,1)" id="131"></td>
-		<td><button type="button" onclick="getdata1(3,2)" id="132"></td>
-		<td><button type="button" onclick="getdata1(3,3)" id="133"></td>
-	</tr>
-	<tr>
-		<td><button type="button" onclick="getdata1(4,1)" id="141"></td>
-		<td><button type="button" onclick="getdata1(4,2)" id="142"></td>
-		<td><button type="button" onclick="getdata1(4,3)" id="143"></td>
-	</tr>
-	<tr>
-		<td><button type="button" onclick="getdata1(5,1)" id="151"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(5,1)" id="51"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(5,2)" id="52"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(5,3)" id="53"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(5,4)" id="54"></td>
+		<td><button class = "Style1" type="button" onclick="getdata(5,5)" id="55"></td>
 	</tr>
 	</table>
-	<button type="button" onclick="regenerate()">Restart the game</button>
-	<p id="Selectedletter"></p>
-	<button type="button" onclick="Check()" id="Submit">Check</button>
-	<p>Your score is:</p><p id="Score"></p>
+	<table id="tbl1" align="center">
+	<tr>
+		<td><button class = "Style1" type="button" onclick="getdata1(1,1)" id="111"></td>
+		<td><button class = "Style1" type="button" onclick="getdata1(1,2)" id="112"></td>
+		<td><button class = "Style1" type="button" onclick="getdata1(1,3)" id="113"></td>
+	</tr>
+	<tr>
+		<td><button class = "Style1" type="button" onclick="getdata1(2,1)" id="121"></td>
+		<td><button class = "Style1" type="button" onclick="getdata1(2,2)" id="122"></td>
+		<td><button class = "Style1" type="button" onclick="getdata1(2,3)" id="123"></td>
+	</tr>
+	<tr>
+		<td><button class = "Style1" type="button" onclick="getdata1(3,1)" id="131"></td>
+		<td><button class = "Style1" type="button" onclick="getdata1(3,2)" id="132"></td>
+		<td><button class = "Style1" type="button" onclick="getdata1(3,3)" id="133"></td>
+	</tr>
+	<tr>
+		<td><button class = "Style1" type="button" onclick="getdata1(4,1)" id="141"></td>
+		<td><button class = "Style1" type="button" onclick="getdata1(4,2)" id="142"></td>
+		<td><button class = "Style1" type="button" onclick="getdata1(4,3)" id="143"></td>
+	</tr>
+	<tr>
+		<td></td>
+		<td><button class = "Style1" type="button" onclick="getdata1(5,1)" id="151"></td>
+	</tr>
+	</table>
+	<center><button class = "Style" type="button" onclick="regenerate()">Restart the game</button></center>
+	<p id="Selectedletter" style="text-align:center;font-weight:bolder;font-size:26px;"></p>
+	<center><button class = "Style" type="button" onclick="Check()" id="Submit">Check</button></center>
+	<p align="center" class="Para">Your score is:</p><p id="Score"></p>
 </body>
 
 <script type="text/javascript" src="Sample.js"></script>
