Updated game as Assignment 3

--- a/Assignments/Assignment3/Wordshake.html
+++ b/Assignments/Assignment3/Wordshake.html
@@ -74,7 +74,7 @@
 	<center><button class = "Style" type="button" onclick="regenerate()">Restart the game</button></center>
 	<p id="Selectedletter" style="text-align:center;font-weight:bolder;font-size:26px;"></p>
 	<center><button class = "Style" type="button" onclick="Check()" id="Submit">Check</button></center>
-	<p align="center" class="Para">Your score is:</p><p id="Score"></p>
+	<p align="center" class="Para">Your score is:</p><p id="Score" style="text-align:center; font-size:25px;"></p>
 </body>
 
 <script type="text/javascript" src="Sample.js"></script>
