--- a/Assignments/Assignment3/Wordshake.html
+++ b/Assignments/Assignment3/Wordshake.html
@@ -6,7 +6,18 @@
 	<link rel="stylesheet" type="text/css" href="hindi.css">
 </head>
 
-<body>
+<body style="background-color:grey;">
+<div class="Language Select">
+	<center>
+		<h3> Choose Language: </h3>
+		<select id='Language' value='Hindi' onchange='setlanguage()'>
+			<option value='hindi'> Hindi </option>
+			<option value='telugu'> Telugu </option>
+			<option value='bhojpuri'> Bhojpuri </option>
+		</select>
+	</center>
+</div>
+	<div class="Main">
 	<h1 style="text-align:center;">If you can, just do it.</h1>
 	<table id="tbl" align="center" div="Table">
 	<tr>
@@ -45,36 +56,11 @@
 		<td><button class = "Style1" type="button" onclick="getdata(5,5)" id="55"></td>
 	</tr>
 	</table>
-	<table id="tbl1" align="center">
-	<tr>
-		<td><button class = "Style1" type="button" onclick="getdata1(1,1)" id="111"></td>
-		<td><button class = "Style1" type="button" onclick="getdata1(1,2)" id="112"></td>
-		<td><button class = "Style1" type="button" onclick="getdata1(1,3)" id="113"></td>
-	</tr>
-	<tr>
-		<td><button class = "Style1" type="button" onclick="getdata1(2,1)" id="121"></td>
-		<td><button class = "Style1" type="button" onclick="getdata1(2,2)" id="122"></td>
-		<td><button class = "Style1" type="button" onclick="getdata1(2,3)" id="123"></td>
-	</tr>
-	<tr>
-		<td><button class = "Style1" type="button" onclick="getdata1(3,1)" id="131"></td>
-		<td><button class = "Style1" type="button" onclick="getdata1(3,2)" id="132"></td>
-		<td><button class = "Style1" type="button" onclick="getdata1(3,3)" id="133"></td>
-	</tr>
-	<tr>
-		<td><button class = "Style1" type="button" onclick="getdata1(4,1)" id="141"></td>
-		<td><button class = "Style1" type="button" onclick="getdata1(4,2)" id="142"></td>
-		<td><button class = "Style1" type="button" onclick="getdata1(4,3)" id="143"></td>
-	</tr>
-	<tr>
-		<td></td>
-		<td><button class = "Style1" type="button" onclick="getdata1(5,1)" id="151"></td>
-	</tr>
-	</table>
 	<center><button class = "Style" type="button" onclick="regenerate()">Restart the game</button></center>
-	<p id="Selectedletter" style="text-align:center;font-weight:bolder;font-size:26px;"></p>
-	<center><button class = "Style" type="button" onclick="Check()" id="Submit">Check</button></center>
-	<p align="center" class="Para">Your score is:</p><p id="Score" style="text-align:center; font-size:25px;"></p>
+	<p id="Selectedletter" style="text-align:center;font-weight:bolder;font-size:23px;"></p>
+	<center><button class = "Style2" type="button" onclick="Check()" id="Submit">Check</button></center>
+	<p align="center" class="Para" id="Score" style="text-align:center;font-weight:bolder;"></p>
+	</div>
 </body>
 
 <script type="text/javascript" src="Sample.js"></script>
